Fix spacing

--- a/static/styles/main.sass
+++ b/static/styles/main.sass
@@ -285,7 +285,7 @@ body
 
     #body
         margin:
-            top: $y-height / 2
+            top: $y-height
             bottom: $y-height / 2
             left: $x-width / 2
             right: $x-width / 2
